Basic Index and about changes

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -33,7 +33,7 @@ footer {
   background-size: cover;
   margin-bottom: 0.5rem;
 
-  &.icon-adventurer {
+  &.icon-insta {
     background-image: url("../../images/static_files/social_media_icons/instagram.svg");
 
     &:hover {
