--- a/src/components/pages/resume/resume.module.scss
+++ b/src/components/pages/resume/resume.module.scss
@@ -75,7 +75,7 @@
         display: flex;
         flex-direction: column;
         .details {
-          height: 70px;
+          min-height: 70px;
           h5 {
             line-height: 0rem;
             margin-bottom: 0.5rem;
