--- a/src/components/pages/contact-me/contact.module.scss
+++ b/src/components/pages/contact-me/contact.module.scss
@@ -1,35 +1,114 @@
 @import "../../../utils/constants";
 
 .about-me-container {
+  flex: 1 1 0%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 2rem 0;
 
-    flex: 1 1 0%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-top:  2rem;
-
-
-
-.div-container{
+  .div-container {
     height: 80%;
     width: 80%;
     display: flex;
 
-    .section-one{
-        background-color: $yellow-color;
-        flex: 1;
-        border-radius: 20px 0px 0px 20px;
-        padding: 50px;
-        
+    .section-one {
+      background-color: $yellow-color;
+      flex: 1;
+      border-radius: 20px 0px 0px 20px;
+      padding: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
     }
-    
-    .section-two{
-        background-color: $blue-black-color;
-        flex: 1;
-        border-radius: 0px 20px 20px 0px;
-        padding: 50px;
 
+    .section-two {
+      background-color: $blue-black-color;
+      flex: 1;
+      border-radius: 0px 20px 20px 0px;
+      padding: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+
+      $yellow-border: #6e5325;
+
+      button {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        outline: none;
+        border: 0;
+        vertical-align: middle;
+        text-decoration: none;
+        font-size: inherit;
+        font-family: inherit;
+        &.learn-more {
+          font-weight: 600;
+          color: $blue-black-color;
+          text-transform: uppercase;
+          padding: 1.25em 2em;
+          background: $yellow-color; //yellow-color
+          border: 2px solid $yellow-border; //
+          border-radius: 0.75em;
+          transform-style: preserve-3d;
+          transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+            background 150ms cubic-bezier(0, 0, 0.58, 1);
+          &::before {
+            position: absolute;
+            content: "";
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: #ffa100;
+            border-radius: inherit;
+            box-shadow: 0 0 0 2px $yellow-border,
+              0 0.625em 0 0 $blue-black-color;
+            transform: translate3d(0, 0.75em, -1em);
+            transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+              box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+          }
+          &:hover {
+            background: #ffaf28;
+            transform: translate(0, 0.25em);
+            &::before {
+              box-shadow: 0 0 0 2px $yellow-border,
+                0 0.5em 0 0 $blue-black-color;
+              transform: translate3d(0, 0.5em, -1em);
+            }
+          }
+          &:active {
+            background: #ffa100;
+            transform: translate(0em, 0.75em);
+            &::before {
+              box-shadow: 0 0 0 2px $yellow-border, 0 0 $blue-black-color;
+              transform: translate3d(0, 0, -1em);
+            }
+          }
+        }
+      }
     }
-}
+  }
 }
 
+@media (max-width: $sm-screen) {
+  .about-me-container {
+    .div-container {
+      flex-direction: column;
+      width: 100%;
+
+      .section-one {
+        border-radius: 20px 20px 0px 0px;
+        padding: 50px 20px;
+      }
+
+      .section-two {
+        border-radius: 0px 0px 20px 20px;
+        padding: 50px 20px;
+      }
+    }
+  }
+}
