--- a/src/components/pages/index/index.layout.module.scss
+++ b/src/components/pages/index/index.layout.module.scss
@@ -3,7 +3,7 @@
 .main-div {
   flex: 1;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
 
   h1 {
@@ -71,6 +71,7 @@
 
 @media (max-width: $sm-screen) {
   .main-div {
+    height: calc(100vh - 65px);
     h1 {
       font-size: 2.25rem;
     }
@@ -122,7 +123,7 @@
     .img-div {
       width: 75vw;
       position: absolute;
-      bottom: 0;
+      bottom: -55px;
       left: 14vw;
       z-index: 2;
     }
