--- a/src/components/pages/resume/resume.module.scss
+++ b/src/components/pages/resume/resume.module.scss
@@ -53,6 +53,9 @@
       background-color: #f5ba57;
       box-shadow: 0px 0px 40px -15px rgba(255, 102, 0, 0.79),
         0 6px 20px 0 rgba(0, 0, 0, 0.69);
+        a{
+          color: inherit;
+        }
     }
   }
 
