--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -8,23 +8,22 @@ h2 {
   color: white;
   text-decoration: none;
   text-shadow: none;
+  white-space: nowrap;
   margin: 0 0 2rem 0;
 }
 
-.menu-items {
+.desc-moto {
+  color: #8d8d8d;
+  letter-spacing: 1px;
+  margin: 0px 10px;
+  line-height: 1.5rem;
+}
 
+.menu-items {
   color: white !important;
   text-transform: uppercase;
 
   &:hover {
-    color: #F5BA57 !important;
+    color: #f5ba57 !important;
   }
 }
-
-
-
-
-
-
-
-
